# agent-hacks

./: .gitignore
orchestrator/: pyproject.toml
planner/: justfile  pyproject.toml  tasks.md
planner/src/: app.py  config.py  linear.py  planner.py  prompts.py  schemas.py
planner/tests/: test_client.py  test_linear.py  test_planner.py
voice/: main.py  requirements.txt
