[project]
name = "planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.82.1",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
